src/test/ui/borrowck/issue-51415.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-51415.rs:6:46
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                              ^-
   |                                              ||
   |                                              |hint: to prevent move, use `ref s` or `ref mut s`
   |                                              cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
